[gd_scene load_steps=7 format=3 uid="uid://i0e5fcqchunv"]

[ext_resource type="PackedScene" uid="uid://c5v471ipc1uc3" path="res://Scene/Base/weapon.tscn" id="1_i7dvo"]
[ext_resource type="Script" uid="uid://do4p087fh0d2v" path="res://Resource/GameObject/Item/LightScythe/light_scythe.gd" id="2_plwpg"]
[ext_resource type="Script" uid="uid://belbuee6empau" path="res://Script/BaseClass/damage_area.gd" id="3_be17r"]
[ext_resource type="Shader" uid="uid://b82nfafr2xoyf" path="res://Resource/Shader/script/scythe.gdshader" id="4_plwpg"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jptdf"]
size = Vector2(48, 256)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_plwpg"]
shader = ExtResource("4_plwpg")
shader_parameter/first_point = Vector2(0.75, 0.2)
shader_parameter/second_point = Vector2(0.2, 0.75)
shader_parameter/min_dist_mult = 11.39
shader_parameter/max_dist_mult = 0.88

[node name="Scythe" instance=ExtResource("1_i7dvo")]
script = ExtResource("2_plwpg")

[node name="DamageArea" type="Area2D" parent="MovingComponent" index="0"]
unique_name_in_owner = true
collision_layer = 0
script = ExtResource("3_be17r")
metadata/_custom_type_script = ExtResource("3_be17r")

[node name="CollisionShape2D" type="CollisionShape2D" parent="MovingComponent/DamageArea" index="0"]
shape = SubResource("RectangleShape2D_jptdf")

[node name="ColorRect" type="ColorRect" parent="MovingComponent" index="1"]
material = SubResource("ShaderMaterial_plwpg")
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -129.0
offset_top = -189.0
offset_right = 129.0
offset_bottom = 189.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.821673, 0, 0.160358, 1)

[node name="Node" type="Node" parent="." index="1"]

[node name="Node2" type="Node" parent="." index="2"]

[node name="TopPoint" type="Node2D" parent="." index="3"]
position = Vector2(0, -113)

[node name="BottomPoint" type="Node2D" parent="." index="4"]
position = Vector2(0, 111)
